kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-ordering-system
  labels:
    name: food-ordering-system
